<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExportsFragment">

    <LinearLayout
        android:id="@+id/linear_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:padding="5dp"
            android:text="@string/cotton_rate"
            android:textColor="@color/tab_text_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_cotonratecandy"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:textColor="@color/tab_text_color"
            android:background="@drawable/custome_edittext"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:hint="@string/cotton_rate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:padding="5dp"
            android:text="@string/rs_per_candy"
            android:textColor="@color/tab_text_color"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:padding="5dp"
            android:text="@string/expenses"
            android:textColor="@color/tab_text_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_export_exp"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/custome_edittext"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/tab_text_color"
            android:textSize="14sp"
            android:gravity="center"
            android:hint="@string/expenses" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:padding="5dp"
            android:text="@string/rs_per_candy"
            android:textColor="@color/tab_text_color"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_2"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:padding="5dp"
            android:text="@string/exchange_rate"
            android:textColor="@color/tab_text_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_excg_rate"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/custome_edittext"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/tab_text_color"
            android:textSize="14sp"
            android:gravity="center"
            android:hint="@string/exchange_rate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:padding="5dp"
            android:text="@string/usd_inr"
            android:textColor="@color/tab_text_color"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_3"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_regular"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:padding="5dp"
            android:text="@string/export_rate"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_exportrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="0"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:padding="5dp"
            android:text="@string/cents_per_bales"
            android:textColor="@color/tab_text_color"
            android:textSize="10sp" />

    </LinearLayout>

</RelativeLayout>